--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     "prefer-stable": true,
     "require": {
         "php": ">=5.4.0",
-        "monolog/monolog" : "~1.6",
-        "ext-mongodb": "^1.1.0"
+        "monolog/monolog" : "~1.6"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
