--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "prefer-stable": true,
     "require": {
         "php": ">=5.4.0",
-        "monolog/monolog" : "~1.6"
+        "monolog/monolog" : "~1.6",
+        "doctrine/mongodb": "~1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
